src/test/deca/context/invalid/object/methodVoidReturn.deca
class X
{
  int a;
}
class A
{
  void a(int a){
    return a;
  }
}

class B extends A
{
  B c = new B();
}
